--- a/index2.html
+++ b/index2.html
@@ -30,16 +30,23 @@ body, html {
   min-height: 80%;
 }
 
-/* Second image (Portfolio) */
+/* Second image  */
 .bgimg-2 {
   background-image: url("/media/IMG_0543 Rides.jpeg");
   min-height: 70%;
 }
 
-/* Third image (Contact) */
+/* Third image  */
 .bgimg-3 {
   background-image: url("/media/IMG_0634 Giro.jpeg");
   min-height: 70%;
+}
+
+
+/* Fourth image  */
+.bgimg-4 {
+  background-image: url("/media/IMG_0498 Siena.jpeg");
+  min-height: 100%;
 }
 
 .bgvideo1 { 
@@ -70,7 +77,8 @@ body, html {
       <a href="#home" class="w3-bar-item w3-button">HOME</a>
       <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> TUSCANA</a>
       <a href="#rides" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> RIDES</a>
-      <a href="#giro" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> GIRO</a>
+      <a href="#giro" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> GIRO</a>
+      <a href="#tourist" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> TOURIST</a>
       </a>
     </div>
   
@@ -79,6 +87,7 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">TUSCANA</a>
       <a href="#rides" class="w3-bar-item w3-button" onclick="toggleFunction()">RIDES</a>
       <a href="#giro" class="w3-bar-item w3-button" onclick="toggleFunction()">GIRO</a>
+      <a href="#tourist" class="w3-bar-item w3-button" onclick="toggleFunction()">TOURIST</a>
     </div>
   </div>
 
@@ -103,35 +112,28 @@ body, html {
       <div class="column">
         <div class="image-item">
           <img src="/media/IMG_0587 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-          <div class="overlay w3-medium"><span>Mormoraia arrival area</span></div>
         </div>
         <div class="image-item">
           <img src="/media/IMG_0503 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-          <div class="overlay"><span>Image title</span></div>
         </div>
         <div class="image-item">
           <img src="/media/IMG_0568 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-          <div class="overlay"><span>Image title</span></div>
         </div>
       </div>
       <div class="column">
         <div class="image-item">
           <img src="/media/IMG_0584 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-          <div class="overlay"><span>Image title</span></div>
         </div>
         <div class="image-item">
           <img src="/media/IMG_0571 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-          <div class="overlay"><span>Image title</span></div>
         </div>
       </div>
       <div class="column">
         <div class="image-item">
           <img src="/media/IMG_0062 Agro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-          <div class="overlay"><span>Image title</span></div>
         </div>
         <div class="image-item">
           <img src="/media/IMG_0565 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-          <div class="overlay"><span>Image title</span></div>
         </div>
       </div>
     </div>
@@ -165,98 +167,105 @@ body, html {
   <h3 class="w3-center">MY WORK</h3>
   <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m4">
-      <img src="/media/IMG_0811 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
-    </div>
-    <div class="w3-col m4">
-      <img src="/media/IMG_0812 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
-    </div>
-    <div class="w3-col m4">
-      <img src="/media/IMG_0813 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
-    </div>
-    <div class="w3-col m4">
-      <img src="/media/IMG_0815 Strava.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+  <div class="container" >
+    <h2 class="heading-text">Ride Pictures</h2>
+    <div class="image-gallery">
+      <div class="column">
+        <div class="image-item">
+          <img src="/media/IMG_0811 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        </div>
+        <div class="image-item">
+          <img src="/media/IMG_0812 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        </div>
+      </div>
+      <div class="column">
+        <div class="image-item">
+          <img src="/media/IMG_0813 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+  
+        </div>
+        <div class="image-item">
+          <img src="/media/IMG_0815 Strava.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+  
+        </div>
+      </div>
     </div>
   </div>
 </div>
-
 <div class="container" >
   <h2 class="heading-text">Ride Pictures</h2>
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
         <img src="/media/IMG_0092 Ride.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
         <img src="/media/IMG_0486 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0504 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0554 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0561 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
     </div>
     <div class="column">
       <div class="image-item">
         <img src="/media/IMG_0509 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0510 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0513 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0559 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0562 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
     </div>
     <div class="column">
       <div class="image-item">
         <img src="/media/IMG_0528 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0529 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0531 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0543 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0560 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
       <div class="image-item">
         <img src="/media/IMG_0581 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
     </div>
   </div>
 </div>
-<!-- Third Parallax Image with Portfolio Text -->
+<!-- Third Parallax Image -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide">Giro d'Italia</span>
@@ -277,40 +286,84 @@ body, html {
     <div class="column">
       <div class="image-item">
         <img src="/media/IMG_0612 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
         <img src="/media/IMG_0628 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
         <img src="/media/IMG_0634 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
       </div>
     </div>
     <div class="column">
       <div class="image-item">
         <img src="/media/IMG_0625 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
         <img src="/media/IMG_0629 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
+
       </div>
     </div>
     <div class="column">
       <div class="image-item">
         <img src="/media/IMG_0626 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
       </div>
       <div class="image-item">
         <img src="/media/IMG_0631 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-        <div class="overlay"><span>Image title</span></div>
       </div>
-    </div>
     </div>
   </div>
 </div>
+
+<!-- Fourth Parallax Image -->
+<div class="bgimg-4 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+    <span class="w3-xxlarge w3-text-white w3-wide">Rest Days</span>
+  </div>
+</div>
+<div class="w3-content w3-container w3-padding-64" id="giro">
+  <h3 class="w3-center">Tourist Stuff</h3>
+  <p>We have created a fictional "personal" website/blog, Duis 
+    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+    ea commodo consequat.
+  </p>
+</div>
+<div class="container" >
+  <h2 class="heading-text">Maranello</h2>
+  <div class="image-gallery">
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0591 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0606 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0634 Giro.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0599 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0608 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0601 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0610 Cars.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+      </div>
+    </div>
+  </div>
+  <h2 class="heading-text">Siena, Poggibonsi</h2>
+</div>
+
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
   <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
