--- a/index2.html
+++ b/index2.html
@@ -51,13 +51,6 @@ body, html {
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
 
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 992px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: scroll;
-    min-height: 400px;
-  }
-}
 </style>
 </head>
 <body>
@@ -263,11 +256,11 @@ body, html {
     </div>
   </div>
 </div>
-
-<div class="bgvideo1 w3-display-container w3-opacity-min">
-  <video autoplay muted loop>
-  <source src="media/My Movie 4.mov" type="video/mp4">
-  </video>
+<!-- Third Parallax Image with Portfolio Text -->
+<div class="bgimg-3 w3-display-container w3-opacity-min">
+  <div class="w3-display-middle">
+    <span class="w3-xxlarge w3-text-white w3-wide">GIRO</span>
+  </div>
 </div>
 <div class="w3-content w3-container w3-padding-64" id="giro">
   <h3 class="w3-center">Giro d'Italia</h3>
@@ -310,8 +303,44 @@ body, html {
     </div>
   </div>
 </div>
+<div class="w3-content w3-container w3-padding-64" id="giro">
+  <h3 class="w3-center">Kilometer Zero</h3>
+  <p>We have created a fictional "personal" website/blog, Duis 
+    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+    ea commodo consequat.
+  </p>
+</div>
+<div class="w3-display-container w3-opacity-min">
+  <video autoplay muted loop>
+  <source src="media/My Movie 4.mov" type="video/mp4">
+  </video>
+</div>
+<div class="w3-content w3-container w3-padding-64" id="giro">
+  <h3 class="w3-center">Maglia Rosa</h3>
+  <p>We have created a fictional "personal" website/blog, Duis 
+    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+    ea commodo consequat.
+  </p>
+</div>
+<div class="w3-display-container w3-opacity-min">
+  <video>
+  <source src="media/My Movie 3.mov" type="video/mp4">
+  </video>
+</div>
+<div class="w3-content w3-container w3-padding-64" id="giro">
+  <h3 class="w3-center">Maranello</h3>
+  <p>We have created a fictional "personal" website/blog, Duis 
+    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+    ea commodo consequat.
+  </p>
+</div>
 <div class="container" >
-  <h2 class="heading-text">Maranello</h2>
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
