--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@ body, html {
   min-height: 70%;
 }
 
-.bgideo1 { 
+.bgvideo1 { 
     width: 100%;
     height: auto;
     padding-bottom: 50px;
@@ -52,6 +52,13 @@ body, html {
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
 
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-width: 1000px) {
+  .bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: scroll;
+    min-height: 400px;
+  }
+}
 </style>
 </head>
 <body>
@@ -328,7 +335,7 @@ body, html {
   </p>
 </div>
 <div class="bgvideo1 w3-display-container w3-opacity-min w3-padding-64">
-  <video>
+  <video controls>
     <source src="media/My Movie 3.mov" type="video/mp4">
   </video>
 </div>
