--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@ body, html {
 .video-container {
     position: relative;
     width: 100%;
-    /* max-width: 800px;  */
+    max-width: 800px; 
     margin: auto;
 }
 
@@ -64,23 +64,12 @@ video {
     display: block;
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 1200px) {
   .video-container {
         position: relative;
         width: 100%;
-        max-width: 800px; 
         margin: auto;
   }  
-  
-  video {
-        /* Add specific styles for small screens */
-        width: 100%;
-        height: auto;
-        display: block;
-        autoplay: false;
-        muted: false;
-        controls: true;
-    }
 }
 
 .w3-wide {letter-spacing: 10px;}
@@ -362,7 +351,7 @@ video {
   </p>
 </div>
 <div class="video-container">
-  <video autoplay muted>
+  <video controls loop>
       <source src="media/My Movie 4.mov" type="video/mp4">
       Your browser does not support the video tag.
   </video>
