--- a/index2.html
+++ b/index2.html
@@ -112,7 +112,7 @@ video {
         <span class="w3-center w3-padding-large w3-dark-grey w3-xlarge w3-wide w3-animate-opacity w3-hide-medium">Tuscany</span>
     </div>  
 </div> 
-<div class="w3-content w3-container w3-padding-64" id="about">
+<div class="w3-content w3-container w3-padding-32" id="about">
     <h3 class="w3-center">Tuscany 2023 Trip</h3>
     <p>This trip was all about cycling the Tuscan countryside. Our homebase was Mormoraia Agriturismo in the center of Tuscany near a very cool medieval
       village called San Gimignano.  Mormoraia is a working farm with a five star winery and olive oil production. We drank their 
@@ -172,20 +172,29 @@ video {
       </div>
     </div>
 </div>
+<div class="w3-container w3-padding-16">
+  <h3 class="w3-center">Siena</h3>
+  <div class="w3-row">
+    <div class="w3-col w3-center">
+      <img src="/media/IMG_0498 Siena.jpeg" class="w3-round w3-image" 
+      alt="Siena is the closest city. Lots to see and great shopping. I bought a suit jacket, shoes and a cool art print. Very unlike me">
+    </div>
+  </div>
+</div>
 <!-- Second Parallax Image with Portfolio Text -->
 <div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide">RIDES</span>
   </div>
 </div>
-<div class="w3-content w3-container w3-padding-64" id="rides">
+<div class="w3-content w3-container w3-padding-32" id="rides">
   <h3 class="w3-center">Bike Rides</h3>
   <p>We planned for five big rides heading in different directions from our base in San Gimignano. 
      However, we were rained out a few days and settled on four long rides and a few shorter trips. We were still able
      to clock 250 KM and 1400 M of climbing. 
   </p>
 </div>
-<div class="w3-content w3-container w3-padding-64" >
+<div class="w3-content w3-container" >
   <h3 class="w3-center">Destinations</h3>
   <p class="w3-center">Our destinations were hilltop castles and medieval villages. Lots of fun <em>Stande Bianche</em>
     (white gravel roads) and up and down climbing</p>
@@ -211,7 +220,7 @@ video {
   </div>
 </div>
 <!-- Google Map -->
-<div class="w3-content w3-container w3-padding-64">
+<div class="w3-content w3-container w3-padding-32">
   <h3 class="w3-center">Here is a map of all the locations we visited in Tuscany on our Bikes</h3>
   <p class="w3-center"><em>Use Two Fingers to Pan and Zoom</em></p>
   <div class="google-maps">
@@ -225,55 +234,11 @@ video {
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
-        <img src="/media/IMG_0092 Ride.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
+        <img src="/media/IMG_0560 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" 
         alt="" />
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0486 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0504 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0554 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
         <img src="/media/IMG_0561 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-    </div>
-    <div class="column">
-      <div class="image-item">
-        <img src="/media/IMG_0509 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0510 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0513 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0562 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0582 Rides.jpeg " onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-    </div>
-    <div class="column">
-      <div class="image-item">
-        <img src="/media/IMG_0528 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
-
-      </div>
-      <div class="image-item">
-        <img src="/media/IMG_0529 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
       <div class="image-item">
@@ -281,17 +246,57 @@ video {
 
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0543 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0554 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
       <div class="image-item">
-        <img src="/media/IMG_0560 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+        <img src="/media/IMG_0529 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0510 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0486 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0509 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0543 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+    </div>
+    <div class="column">
+      <div class="image-item">
+        <img src="/media/IMG_0092 Ride.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0525 SanG.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0513 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0504 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
+
+      </div>
+      <div class="image-item">
+        <img src="/media/IMG_0562 Rides.jpeg" onclick="onClick(this)" class="w3-hover-opacity" alt="" />
 
       </div>
     </div>
   </div>
 </div>
-<div class="w3-content w3-container w3-padding-64">
+<div class="w3-content w3-container w3-padding-16">
   <h3 class="w3-center">Via francigena</h3>
   <p>We accidentily found ourselves following an ancient pilgrimage path called Via Francigena on some of our rides. Via Francigena runs all the way from 
     Canterbury England to Rome. The first record of the route dates to the year 725. The churchs below were refuges for pilgrims on the way to Rome. 
@@ -302,7 +307,7 @@ video {
     The baths were destroyed in 1200 by invading troops. Wikipedia says locals still use the pools for their healing powers. 
   </p>
 </div>
-<div class="w3-container w3-content">
+<div class="w3-container w3-content w3-padding-32">
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
@@ -334,15 +339,21 @@ video {
 </div>
 <div class="w3-content w3-container w3-padding-64" id="giro">
   <h3 class="w3-center">Giro d'Italia</h3>
-  <p>We have created a fictional "personal" website/blog, Duis 
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-    qui officia deserun sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-    ea commodo consequat.
-  </p>
+  <p>We moved our homebase to a beach town called ViaReggio for the last few days of our trip. This is so we could catch a stage of 
+    the Giro d'Italia. The Giro is the Italian equivilent of the Tour de France.
+    We stayed at the Hotel Plaza de Russie. Easily the most luxurious hotel we've ever visited. 
+    The breakfast experience exemplified the type of place it was. If the lady had a purse they would setup a "purse chair" for it
+    at the table.</p>
+<em>Here is an excerpt on the history of the Hotel -</em>
+<p>Erected in 1871 along the route of the Grand Tour, it is the oldest hotel in ViaReggio.
+  Situated along the seaside promenade, the hotel is in the heart of the Art Nouveau district that arose in the early 1900s. First to find 
+  shelter here were Russian expatriates, fleeing from the Tsarist Empire, followed by Russian aristocracy escaping the Bolshevik
+  Revolution. Events such as these gave the hotel not only a certain number of accounts that were to go forever unpaid, but also the 
+  “de Russie” name, which it maintains to this day.
+</p>
 </div>
 <div class="container" >
-  <h2 class="heading-text">Viareggio</h2>
+  <h2 class="heading-text">ViaReggio</h2>
   <div class="image-gallery">
     <div class="column">
       <div class="image-item">
